--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
 #          name: Generate allure report
 #          command: mvn allure:report
 #          when: always
-#      - store_test_results:
+      - store_test_results:
           path: target/surefire-reports/junitreports
           when: always
 #      - store_artifacts:
